distribution block center align fix

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ color: #000000;
 .Testimonial_quotation p{height: 130px;padding: 30px 12px 3px;display: inline-block;font-family: "Yu Gothic UI Light", "Microsoft YaHei UI Light", "Bookman Old Style";font-size: 15px;font-weight: 400;line-height: 1.2;text-align: center;}
 #Distribution{height: 578px;width:100%;display: block;}
 #Distribution_wrap{margin: 50px auto 0;width: 100%;display: block;}
-.Distribution_line_1,.Distribution_line_2,.Distribution_line_3{/* margin: 0 auto; */width: 70%;height: 145px;line-height: 160px;display: block;vertical-align: middle;}
+.Distribution_line_1,.Distribution_line_2,.Distribution_line_3{margin: 0 auto; width: 70%;height: 145px;line-height: 160px;display: flex;vertical-align: middle;}
 .Distribution_icon{
 margin: 0;
 padding: 5px 10px;
